crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__desert_named_step_activated_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "Mana",
        "produced": {
          "type": "Colorless",
          "count": {
            "type": "Fixed",
            "value": 1
          }
        }
      },
      "cost": {
        "type": "Tap"
      },
      "sub_ability": null,
      "duration": null,
      "description": "{T}: Add {C}.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false,
      "is_mana_ability": true
    },
    {
      "kind": "Activated",
      "effect": {
        "type": "DealDamage",
        "amount": {
          "type": "Fixed",
          "value": 1
        },
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": null,
          "properties": [
            {
              "type": "Attacking"
            }
          ]
        }
      },
      "cost": {
        "type": "Tap"
      },
      "sub_ability": null,
      "duration": null,
      "description": "{T}: ~ deals 1 damage to target attacking creature. Activate only during the end of combat step.",
      "target_prompt": null,
      "activation_restrictions": [
        {
          "type": "RequiresCondition",
          "data": {
            "condition": {
              "type": "CurrentPhaseIs",
              "phases": [
                "EndCombat"
              ]
            }
          }
        }
      ],
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
