crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__eidolon_of_the_great_revel_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 91,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever a player casts a spell with mana value 3 or less, ~ deals 2 damage to that player."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "SpellCast",
            "partial_def": {
              "mode": "SpellCast",
              "execute": null,
              "valid_card": {
                "type": "Typed",
                "type_filters": [
                  "Card"
                ],
                "controller": null,
                "properties": [
                  {
                    "type": "Cmc",
                    "comparator": "LE",
                    "value": {
                      "type": "Fixed",
                      "value": 3
                    }
                  }
                ]
              },
              "origin": null,
              "destination": null,
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": null,
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": null,
              "valid_source": null,
              "description": null,
              "constraint": null,
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 31,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "~ deals 2 damage to that player"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "DealDamage",
                        "amount": {
                          "type": "Fixed",
                          "value": 2
                        },
                        "target": {
                          "type": "TriggeringPlayer"
                        }
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": null,
              "trigger_subject": {
                "type": "Player"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "~ deals 2 damage to that player.",
              "relative_player_scope": null
            },
            "source_text": "Whenever a player casts a spell with mana value 3 or less, ~ deals 2 damage to that player.",
            "die_results": []
          }
        }
      }
    }
  ],
  "source_text": "Whenever a player casts a spell with mana value 3 or less, this creature deals 2 damage to that player.",
  "card_name": "Eidolon of the Great Revel"
}
