crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__elenda_life_threshold_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [],
  "triggers": [],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 1
        },
        {
          "type": "AddToughness",
          "value": 1
        },
        {
          "type": "AddKeyword",
          "keyword": "Menace"
        }
      ],
      "condition": {
        "type": "QuantityComparison",
        "lhs": {
          "type": "Ref",
          "qty": {
            "type": "LifeTotal",
            "player": {
              "type": "Controller"
            }
          }
        },
        "comparator": "GT",
        "rhs": {
          "type": "Ref",
          "qty": {
            "type": "StartingLifeTotal"
          }
        }
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "As long as your life total is greater than your starting life total, ~ gets +1/+1 and has menace."
    },
    {
      "mode": "Continuous",
      "affected": {
        "type": "SelfRef"
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 5
        },
        {
          "type": "AddToughness",
          "value": 5
        }
      ],
      "condition": {
        "type": "QuantityComparison",
        "lhs": {
          "type": "Ref",
          "qty": {
            "type": "LifeAboveStarting"
          }
        },
        "comparator": "GE",
        "rhs": {
          "type": "Fixed",
          "value": 10
        }
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "~ gets an additional +5/+5 as long as your life total is at least 10 greater than your starting life total."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
